# UmaLauncher

./: .gitignore  Training_Analyzer_Documentation.md  backfill_activated_skills.py  build_global.bat  build_jp.bat  build_jp_steam.bat  generate_packet_ref.py  migrate_to_region_folders.py  packet_reference.md  pyproject.toml  readme.md  rebuild_race_summary.py  repair_unknown_races.py  run_global.bat  run_jp.bat  run_jp_steam.bat  training_viewer.html  unpack_runs.py
umalauncher/: account.py  carrotjuicer.py  horsium.py  mdb.py  race_logger.py  settings.py  skill_recommender.py  threader.spec  threader_global.spec  threader_jp_steam.spec  training_tracker.py  umatray.py  util.py
umalauncher/_assets/: chara_meta.json  event_chain_meta.json  race_meta.json  support_card_meta.json
