[project]
name = "umalauncher"
version = "0.1.0"
description = "Software that enhances the Uma Musume experience."
readme = "readme.md"
requires-python = ">=3.13"
license = "GPL-3.0-or-later"
dependencies = [
    "flask~=3.1.2",
    "loguru~=0.7.3",
    "matplotlib~=3.10.0",
    "msgpack~=1.1.2",
    "numpy~=2.4.3",
    "pathvalidate~=3.3.1",
    "pillow~=12.1.1",
    "protobuf~=7.34.0",
    "psutil~=7.2.2",
    "pycryptodomex~=3.23.0",
    "pypresence~=4.6.1",
    "pyqt5~=5.15.11",
    "pystray~=0.19.5",
    "pywin32==311",
    "requests~=2.32.4",
    "selenium~=4.38.0",
    "steampathfinder==0.0.5",
    "werkzeug~=3.1.3",
]

[dependency-groups]
dev = [
    "pyinstaller~=6.16.0",
    "pyinstaller-hooks-contrib~=2025.8",
    "pyinstaller-versionfile~=3.0.1",
]

[tool.uv]
environments = ["sys_platform == 'win32' and platform_machine == 'AMD64'"]
